added instruction to run printer integration in Kafka section

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/camelkocpserverlesseventing.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/camelkocpserverlesseventing.asciidoc
@@ -737,6 +737,12 @@ Now run the Splitter Integration
 kamel run splitter.groovy
 ----
 
+Now run the Printer Integration
+[source]
+----
+kamel run printer.groovy
+----
+
 Take a look at the log file for the splitter Integration, you will notice something a bit weird
 
 The splitter is outputting the message like this :-
