Updates to Tekton and ODO chapters

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
@@ -27,7 +27,8 @@ image::odo-2.png[odo in the development cycle - detail]
  
 === Installing
 
-The odo command line interface is available for download from here : https://github.com/openshift/odo
+
+The odo command line interface is built into the terminal that you create as a pre-requisite for this workshop so you don't have to install anything right now. However, if you want to install the interface on your own workstation then it is available for download from here : https://github.com/openshift/odo.
 
 *If you haven't already please follow the instructions in the pre-req chapter which explains the creation and setting up of the terminal application. For this chapter you will be using that application which has the odo command pre-installed for you*
 
@@ -153,7 +154,11 @@ The output from the above command is shown below
 
 image::odo-3.png[odo in the development cycle - detail]
 
-The application has started up and will be running at the URL indicated in the output above. Copy the URL from your command window and paste it into a new browser tab. You should see an output similar to that shown below
+Wait for the response "Changes successfully pushed to component"
+
+The application has started up and will be running at the URL indicated in the output above. Copy the URL from your command window and paste it into a new browser tab. You should see an output similar to that shown below.
+
+Note - within the terminal window to copy text you should highlight the text, right click and select copy. To past to the terminal window use ctrl-shift-v.
 
 [source]
 ----
